// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na lateral — apenas cavilhas + rasgo (sem Ø5) 1`] = `
[
  {
    "face": "A",
    "x": 8,
    "y": 15,
  },
  {
    "face": "A",
    "x": 8,
    "y": 474.5,
  },
  {
    "face": "A",
    "x": 490,
    "y": 15,
  },
  {
    "face": "A",
    "x": 490,
    "y": 477.5,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 632.5,
  "bodyWidth": 548,
  "height": 718,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 1,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 270.5,
  "bodyWidth": 548,
  "height": 356,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -180,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 289.5,
  "bodyWidth": 548,
  "height": 358,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 181,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 149.83333333333334,
  "bodyWidth": 548,
  "height": 235.33333333333334,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -240.33333333333331,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 168.83333333333331,
  "bodyWidth": 548,
  "height": 237.33333333333331,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 0,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 168.83333333333331,
  "bodyWidth": 548,
  "height": 237.33333333333331,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 241.3333333333333,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 89.5,
  "bodyWidth": 548,
  "height": 175,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -270.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 108.5,
  "bodyWidth": 548,
  "height": 177,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -90.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 108.5,
  "bodyWidth": 548,
  "height": 177,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 90.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 108.5,
  "bodyWidth": 548,
  "height": 177,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 271.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;
